<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/main_page_gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_page_gradient"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_sib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="63dp"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="36sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_sib"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/white"
                android:textSize="36sp" />

            <Button
                android:id="@+id/transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_sib"
                android:layout_alignStart="@+id/changeName"
                android:layout_alignLeft="@+id/changeName"
                android:layout_alignEnd="@+id/changeName"
                android:layout_alignRight="@+id/changeName"
                android:layout_marginTop="80dp"
                android:background="@drawable/main_page_buttons"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/transaction"
                android:textColor="#fff"
                android:textSize="15sp" />

            <Button
                android:id="@+id/deposit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transaction"
                android:layout_alignStart="@+id/transaction"
                android:layout_alignLeft="@+id/transaction"
                android:layout_alignEnd="@+id/changeName"
                android:layout_alignRight="@+id/changeName"
                android:layout_marginTop="12dp"
                android:background="@drawable/main_page_buttons"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/deposit"
                android:textColor="#fff"
                android:textSize="15sp" />

            <Button
                android:id="@+id/transaction_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deposit"
                android:layout_alignStart="@+id/deposit"
                android:layout_alignLeft="@+id/deposit"
                android:layout_alignEnd="@+id/deposit"
                android:layout_alignRight="@+id/deposit"
                android:layout_marginTop="13dp"
                android:background="@drawable/main_page_buttons"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/transactionHistory"
                android:textColor="#fff"
                android:textSize="15sp" />

            <Button
                android:id="@+id/changeName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transaction_history"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="@drawable/main_page_buttons"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/changeName"
                android:textColor="#fff"
                android:textSize="15sp" />

            <Button
                android:id="@+id/deleteAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/changeName"
                android:layout_alignStart="@+id/transaction_history"
                android:layout_alignLeft="@+id/transaction_history"
                android:layout_alignEnd="@+id/changeName"
                android:layout_alignRight="@+id/changeName"
                android:layout_marginTop="13dp"
                android:background="@drawable/main_page_buttons"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:text="@string/deleteAccount"
                android:textColor="#fff"
                android:textSize="15sp" />



            <Button
                android:id="@+id/calender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deleteAccount"
                android:layout_alignStart="@+id/deleteAccount"
                android:layout_alignLeft="@+id/deleteAccount"
                android:layout_alignEnd="@+id/deleteAccount"
                android:layout_alignRight="@+id/deleteAccount"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/main_page_buttons"
                android:paddingLeft="13dp"
                android:paddingRight="10dp"
                android:text="@string/calender"
                android:textColor="#fff"
                android:textSize="15sp" />

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/calender"
                android:layout_alignStart="@+id/calender"
                android:layout_alignLeft="@+id/calender"
                android:layout_alignEnd="@+id/calender"
                android:layout_alignRight="@+id/calender"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/main_page_buttons"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/logout"
                android:textColor="#fff"
                android:textSize="15sp" />

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
